--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,13 @@
-ARG VARIANT=8.0-preview
-FROM mcr.microsoft.com/dotnet/sdk:${VARIANT}
-ENV PATH $PATH:/home/vscode/.dotnet:/home/vscode/.dotnet/tools
+ARG VARIANT=bullseye
+ARG VERSION=3.10
+FROM --platform=amd64 mcr.microsoft.com/devcontainers/python:${VERSION}-${VARIANT}
+
+# Copy the setup scripts
+COPY library-scripts/*.sh /tmp/library-scripts/
+
+RUN export DEBIAN_FRONTEND=noninteractive \
+    && apt-get update \
+    && apt-get install -y xdg-utils \
+    && curl -fsSL https://aka.ms/install-azd.sh | bash \
+    && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/*
