--- a/Store/appsettings.json
+++ b/Store/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ProductEndpoint": "http://localhost:5228",
-  "ProductEndpointHttps": "https://localhost:7130",
-  "ImagePrefix": "http://localhost:5228/images"
+  "ProductEndpoint": "http://localhost:5200",
+  "ProductEndpointHttps": "https://localhost:5200",
+  "ImagePrefix": "http://localhost:5200/images"
 }
