--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: DockerfileStore
     environment: 
-      - ProductEndpoint=http://backend
+      - ProductEndpoint=http://host.docker.internal:5200
     ports:
       - "5902:8080"
     depends_on: 
