--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,9 +7,7 @@
         }
     },
     "features": {
-	"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
-	    "version": "20:10"
-	},
+	"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
         "ghcr.io/devcontainers/features/github-cli:1": {
             "version": "2"
         }
