--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,9 @@
         }
     },
     "features": {
-	"ghcr.io/devcontainers/features/docker-in-docker:2": {},
+	"ghcr.io/devcontainers/features/docker-from-docker:1": {
+            "version": "20.10"
+        },
         "ghcr.io/devcontainers/features/github-cli:1": {
             "version": "2"
         }
