Reconfigured codespace forwarded ports and added a NodePort to the backend service

--- a/k3d.yml
+++ b/k3d.yml
@@ -9,6 +9,9 @@ ports:
   - port: 32000:32000
     nodeFilters:
       - server[0]
+  - port: 32001:32001
+    nodeFilters:
+      - server[0]
 options:
   k3d:
     wait: true
