--- a/finished-files/backend-deploy.yml
+++ b/finished-files/backend-deploy.yml
@@ -27,8 +27,10 @@ kind: Service
 metadata:
   name: productsbackend
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - port: 80
+    targetPort: 80
+    nodePort: 32001
   selector:
     app: productsbackend
